ChromeTestExtensionLoader: Add support for failed unpacked extensions load.

If an unpacked extension is loaded unsuccessfully using the
ChromeTestExtensionLoader, it enters an endless loop since it keeps waiting for
the extension to be loaded successfully. This CL adds support for the
|should_fail_| parameter to unpacked extensions, so that load errors can be
tested for unpacked extensions as well.

BUG=757680

Change-Id: I3fd9009522a31368f741da8d72178f54b9cfc82b
Reviewed-on: https://chromium-review.googlesource.com/625070
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496468}
Former-commit-id: b794ad5740574fd211514773ee703b9468269d1b